--- a/composer.json
+++ b/composer.json
@@ -23,18 +23,18 @@
     "minimum-stability": "dev",
     "prefer-stable": true,
     "require": {
-        "php": "^7.1 | ^8.0",
+        "php": "^7.3 || ^8.0",
         "prooph/snapshot-store" : "^1.1"
     },
     "require-dev": {
         "psr/container": "^1.0",
         "sandrokeil/interop-config": "^2.0.1",
-        "phpunit/phpunit": "^6.0",
+        "phpunit/phpunit": "^8.0",
         "phpspec/prophecy": "^1.7",
-        "prooph/php-cs-fixer-config": "^0.3",
+        "prooph/php-cs-fixer-config": "^0.4",
         "prooph/bookdown-template": "^0.2.3",
         "satooshi/php-coveralls": "^1.0",
-        "sebastian/comparator": "^1.2.2"
+        "sebastian/comparator": "^3.0"
     },
     "suggest" : {
         "prooph/pdo-event-store": "^1.0 For usage with MySQL or Postgres as event store",
